--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -3,7 +3,7 @@
     <hr>
     <div class="row">
         <div class="col-sm-7">
-            <h4><i class="fas fa-angle-double-right"></i>今週終わらせること</h4>
+            <h4><i class="fas fa-angle-double-right"></i>1週間以内に終わらせるタスク</h4>
             <br>
             <div class="list-group">
                 <a href="/tasks/<%= @recent_task_top.id %>" style="color:white;">
@@ -30,21 +30,25 @@
             <h3><i class="fas fa-angle-double-right"></i><%= @work.w_name %>の進捗</h3>
             <br>
             <div class="progress">
-                <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:25%;"></div>
-                <span class="ml-1">5%</span>
+                <div class="progress-bar" role="progressbar" aria-valuenow="<%= @work.w_percent %>" aria-valuemin="0" aria-valuemax="100" style="width:<%= @work.w_percent %>%;"></div>
+                <span class="ml-1"><%= @work.w_percent %>%</span>
             </div>
             <br>
             <hr>
-            <h3><i class="fas fa-angle-double-right"></i>遅れそうなスケジュール</h3>
+            <h3><i class="fas fa-angle-double-right"></i>明日期限のタスク</h3>
             <br>
-            <div class="list-group">
-                <% @late_tasks.each do |l_task| %>
-                    <a href="/tasks/<%= l_task.id %>" class="list-group-item list-group-item-action">
-                    <%= l_task.t_name %> <small>締め切り <%= (l_task.end_date - Date.today).to_i %>日前</small>
-                    <span class="btn btn-<%= l_task.task_status[1] %>" style="color:white;float:right;"><%= l_task.task_status[0] %></span>
-                    </a>
-                <% end %>
-            </div>
+            <% unless @late_tasks == [] then %>
+                <div class="list-group">
+                    <% @late_tasks.each do |l_task| %>
+                        <a href="/tasks/<%= l_task.id %>" class="list-group-item list-group-item-action">
+                        <%= l_task.t_name %> <small>締め切り <%= (l_task.end_date - Date.today).to_i %>日前</small>
+                        <span class="btn btn-<%= l_task.task_status[1] %>" style="color:white;float:right;"><%= l_task.task_status[0] %></span>
+                        </a>
+                    <% end %>
+                </div>
+            <% else %>
+                <p>明日期限のタスクはありません。</p>
+            <% end %>
             <br>
             <hr>
             <h3><i class="fas fa-angle-double-right"></i>役割</h3>
