--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,5 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">タイトル</a>
+  <% if @work != nil then %>
+    <a class="navbar-brand" href="/works/<%= @work.w_url %>"><%= @work.w_name %></a>
+  <% else %>
+    <a class="navbar-brand" href="/">タイトル</a>
+  <% end %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
