--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -18,6 +18,14 @@
                     <%= button_to @task.task_status[0], undone_path(@task), method: :post, remote: true, :class => "btn btn-#{@task.task_status[1]}", :id => "task-not-yet"%>
                 <% end %>
             </h4>
+            <p style="margin-top:20px;">
+                <i class="fas fa-clock"></i>　<%= @task.start_date %>〜<%= @task.end_date %>
+                <br><br>
+                <i class="fas fa-user-circle"></i>　<%= @task.role %>
+                <div class="schedule-detail-section">
+                    <i class="fas fa-stopwatch" style="margin-left:-30px;"></i><p id="sd-days" style="display:inline-block;text-align:left;margin-top:10px;margin-left:20px;"></p>
+                </div>
+            </p>
             <div class="schdule-detail-section" style="background-color:#eee;padding:15px;margin-top:20px">
                 <% if @task.reference_url != "" then %>
                     <h5>参考ページ</h5>
@@ -36,9 +44,6 @@
                     <label name="reference_image">画像URL</label>
                     <input type="text" name="reference_image" class="form-control" style="width:300px;">
                 <% end %>
-                <div class="schedule-detail-section">
-                    <h5 id="sd-days" style="text-align:left;"></h5>
-                </div>
             </div>
             <br>
             <h4><i class="fas fa-asterisk"></i> <%= @task.t_name %>の詳細</h4>
@@ -128,7 +133,7 @@
         if (daysLeft < 0 || hoursLeft < 0 || minitesLeft < 0 || secondsLeft < 0){
             document.getElementById("sd-days").innerHTML = "期限切れです...";
         }else{
-            document.getElementById("sd-days").innerHTML = ("残り時間　　　<div class='d-day'>" + daysLeft + "日</div> <div class='d-hour'>" + hoursLeft + "時間</div> <div class='d-min'>" + minitesLeft + "分</div> <div class='d-sec'>" + secondsLeft + "秒</div>");
+            document.getElementById("sd-days").innerHTML = ("<div class='d-day'>" + daysLeft + "日</div> <div class='d-hour'>" + hoursLeft + "時間</div> <div class='d-min'>" + minitesLeft + "分</div> <div class='d-sec'>" + secondsLeft + "秒</div>");
         }
     }
     setInterval('time()',500);
