--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,14 +2,34 @@
     .button_to{display: inline-block !important;}
 </style>
 <div style="margin:20px 60px;">
+    <h4>
+    <i class="fas fa-asterisk"></i>　
+    <%= @task.t_name %>　
+    <% if @parent_task != nil then %>
+        <small style="margin-left:40px;font-size:14px;"><a href="/tasks/<%= @parent_task.id %>"><%= @parent_task.t_name %></a>の用事</small>
+    <% end %>
+    </h4>
+    <hr>
     <div class="row">
         <div class="col-sm-8">
-            <h4>
-                <i class="fas fa-asterisk"></i>　
-                <%= @task.t_name %>　
-                <% if @parent_task != nil then %>
-                    <a class="btn btn-info" href="/tasks/<%= @parent_task.id %>" style="color:white;display: inline-block;"><%= @parent_task.t_name %></a>
+            <span style="margin-top:20px;">
+                <i class="fas fa-clock"></i>　<a class="btn btn-light" id="time-text" href="javascript:create_input('#time-text')" style="background-color:#eee;" href=""><%= @task.start_date %>〜<%= @task.end_date %></a>
+                <span id="time-text-input" style="display:none;">
+                <%= form_for @task, method: :post, remote: true, :style => "display:inline-block;" do |f| %>
+                    <%= f.date_field :start_date, :class => "form-control", :style => "width:180px;display:inline-block;" %> 〜 <%= f.date_field :end_date, :class => "form-control", :style => "width:180px;display:inline-block;" %>
+                    <%= f.submit "保存する", :class => "btn btn-sm btn-success" %>
                 <% end %>
+                </span>
+                <br><br>
+                <i class="fas fa-user-circle"></i>　<a class="btn btn-light" id="role-text" href="javascript:create_input('#role-text')" style="background-color:#eee;"><%= @task.role %></a></span>
+                <span id="role-text-input" style="display:none;">
+                <%= form_for @task, method: :post, remote: true, :style => "display:inline-block;" do |f| %>
+                    <%= f.text_field :role, :class => "form-control", :style => "width:180px;display:inline-block;" %>
+                    <%= f.submit "保存する", :class => "btn btn-sm btn-success" %>
+                <% end %>
+                </span>
+                <br><br>
+                <i class="fas fa-clipboard-list"></i>　
                 <% if @task.done == false %>
                     <a id="task<%= @task.id %>" class="btn btn-success" style="display:none;width:100px;color:white;display:none"><%= @task.task_status[0] %></a>
                     <%= button_to @task.task_status[0], done_path(@task), method: :post, remote: true, :class => "btn btn-#{@task.task_status[1]}", :id => "task-not-yet"%>
@@ -17,15 +37,10 @@
                     <a id="task<%= @task.id %>" class="btn btn-danger" style="display:none;width:100px;color:white;display:none">未完了</a>
                     <%= button_to @task.task_status[0], undone_path(@task), method: :post, remote: true, :class => "btn btn-#{@task.task_status[1]}", :id => "task-not-yet"%>
                 <% end %>
-            </h4>
-            <p style="margin-top:20px;">
-                <i class="fas fa-clock"></i>　<%= @task.start_date %>〜<%= @task.end_date %>
-                <br><br>
-                <i class="fas fa-user-circle"></i>　<%= @task.role %>
                 <div class="schedule-detail-section">
                     <i class="fas fa-stopwatch" style="margin-left:-30px;"></i><p id="sd-days" style="display:inline-block;text-align:left;margin-top:10px;margin-left:20px;"></p>
                 </div>
-            </p>
+            </span>
             <div class="schdule-detail-section" style="background-color:#eee;padding:15px;margin-top:20px">
                 <% if @task.reference_url != "" then %>
                     <h5>参考ページ</h5>
@@ -36,7 +51,7 @@
                         </div>
                     </a>
                 <% else %>
-                    <h5>参考ページを登録しよう</h5>
+                    <h5><i class="fas fa-angle-double-right"></i>　参考ページを登録しよう</h5>
                     <label name="reference_text">サイト名</label>
                     <input type="text" name="reference_text" class="form-control" style="width:300px;">
                     <label name="reference_url">ページURL</label>
@@ -46,42 +61,21 @@
                 <% end %>
             </div>
             <br>
+            <hr>
             <h4><i class="fas fa-asterisk"></i> <%= @task.t_name %>の詳細</h4>
-            <div class="schedule-detail-section">
-                <textarea rows="3" cols="100" class="form-control"></textarea>
-                <a href="" class="btn btn-xs btn-success" style="margin-top:10px;margin-bottom:20px;">保存</a>
             <br>
-            </div>
-            <br>
-            <h4><i class="fas fa-asterisk"></i> <%= @task.t_name %>の役割分担</h4>
-            <div class="schedule-detail-section">
-            <table class="table">
-                <tr>
-                    <td>開始日</td><td><%= @task.start_date %></td>
-                </tr>
-                <tr>
-                    <td>終了日</td><td><%= @task.end_date %></td>
-                </tr>
-                <tr>
-                    <td>担当者</td><td><%= @task.role %></td>
-                </tr>
-            </table>
-            <a class="btn btn-warning">終了した</a>
-            </div>
+            <textarea rows="3" cols="100" class="form-control"></textarea>
             <br>
             <% if @task.parent_task_id == 0 then %>
+                <br>
                 <h4><i class="fas fa-asterisk"></i> 含まれる作業</h4>
                 <div class="schedule-detail-section">
                     <div class="list-group">
                         <% Task.where(:t_number => @task.t_number, :work_id => @task.work.id).each do |t_task| %>
                             <% if t_task.parent_task_id == 0 then %>
-                                <div class="list-group-item list-group-item-action active">
-                                    <a href="/tasks/<%= t_task.id %>" style="color:white;"><%= t_task.t_name %></a>
-                                </div>
+                                <a href="/tasks/<%= t_task.id %>" class="list-group-item list-group-item-action active" style="color:white;"><%= t_task.t_name %></a>
                             <% else %>
-                                <div class="list-group-item list-group-item-action">
-                                    <a href="/tasks/<%= t_task.id %>"><%= t_task.t_name %></a>
-                                </div>     
+                                <a class="list-group-item list-group-item-action" href="/tasks/<%= t_task.id %>"><%= t_task.t_name %></a>   
                             <% end %>           
                         <% end %>
                     </div>
@@ -90,7 +84,7 @@
             <% end %>
             <a href="/works/<%= @task.work.w_url %>" class="btn btn-danger" style="margin-top:20px;">戻る</a>
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4" style="margin-top:10px;">
             <div class="task-detail-left">
                 <h4><i class="fas fa-asterisk"></i> 関係するタスク</h4>
                 <br>
@@ -114,6 +108,18 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    
+    function create_input(tag_id){
+        $(tag_id).css('display', 'none')
+        $(tag_id + "-input").css('display', 'inline-block')
+        // [date1, date2] = $(tag_id).text().split("〜");
+        // var input_id = tag_id + "-input";
+        // $(input_id).html("<input type='text' value='" + date1 + "' name='start_date' class='form-control' style='width:200px;display:inline-block;'> 〜 " +
+        //    "<input type='text' value='" + date2 + "' name='end_date' class='form-control' style='width:200px;display:inline-block;'>" +
+        //    "<br><input type='button' class='btn btn-success' value='保存' style='margin-top:5px;margin-left:30px;'>")
+    }
+</script>
 <script type="text/javascript">
     function time(){
         var now = new Date();
