--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -136,25 +136,27 @@
         <br>
         <table class="table">
             <% @persons.each do |person| %>
-                <% p_tasks = person.tasks.pluck(:t_number).uniq %>
                 <tr>
-                    <td><%= person.p_name %>(<%= person.role %>)</td>
-                    <% alert_array = ["danger", "primary", "warning", "success"]; %>
-                    <% (1..4).each do |p_num| %>
-                        <td>
-                        <% if p_tasks.include?(p_num) %>
-                            <div class="alert-<%= alert_array[p_num-1] %> text-center">
-                                <a href="/tasks/<%= Task.find_by(:work_id => @work.id, :parent_task_id => 0, :t_number => p_num).id %>">
-                                    <%= Task.find_by(:work_id => @work.id, :parent_task_id => 0, :t_number => p_num).t_name %>
-                                    <br>
-                                    <small><%= Task.find_by(:work_id => @work.id, :parent_task_id => 0, :t_number => p_num).end_date %>まで</small>
-                                </a>
-                            </div>
-                        <% end %>
-                        </td>
+                <td><%= person %></td>
+                <% alert_array = ["danger", "primary", "warning", "success"]; %>
+                <% p_tasks = Task.where(:role => person, :work_id => @work.id).select('t_number, t_name, end_date') %>
+                <% p_number_tasks = [] %>
+                <% p_tasks.map do |p_t| p_number_tasks << p_t.t_number end %>
+                <% (1..4).each do |p_num| %>
+                    <td>
+                    <% if p_number_tasks.include?(p_num) %>
+                        <div class="alert-<%= alert_array[p_num-1] %> text-center">
+                            <a href="/tasks/<%= Task.find_by(:work_id => @work.id, :parent_task_id => 0, :t_number => p_num).id %>">
+                                <%= Task.find_by(:work_id => @work.id, :parent_task_id => 0, :t_number => p_num).t_name %>
+                                <br>
+                                <small><%= Task.find_by(:work_id => @work.id, :parent_task_id => 0, :t_number => p_num).end_date %>まで</small>
+                            </a>
+                        </div>
                     <% end %>
-                </tr>
-            <% end %>
+                    </td>
+                <% end %>
+            </tr>
+        <% end %>
         </table>
         <br>
         <h4><i class="fas fa-angle-double-right"></i>全タスク表</h4>
