--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -21,7 +21,7 @@
                         <br>
                         <i class="fas fa-clock"></i>　<%= r_task.end_date %>まで
                         </small>
-                        <span class="btn btn-<%= r_task.task_status[1] %>" style="color:white;float:right;"><%= r_task.task_status[0] %></span>
+                        <span class="btn btn-sm btn-<%= r_task.task_status[1] %>" style="color:white;float:right;"><%= r_task.task_status[0] %></span>
                     </a>
                 <% end %>
             </div>
@@ -42,7 +42,7 @@
                     <% @late_tasks.each do |l_task| %>
                         <a href="/tasks/<%= l_task.id %>" class="list-group-item list-group-item-action">
                         <%= l_task.t_name %> <small>締め切り <%= (l_task.end_date - Date.today).to_i %>日前</small>
-                        <span class="btn btn-<%= l_task.task_status[1] %>" style="color:white;float:right;"><%= l_task.task_status[0] %></span>
+                        <span class="btn btn-sm btn-<%= l_task.task_status[1] %>" style="color:white;float:right;"><%= l_task.task_status[0] %></span>
                         </a>
                     <% end %>
                 </div>
@@ -58,7 +58,7 @@
                 <div class="list-group-item list-group-item-action">
                     <i class="fas fa-user-circle"></i>　<%= t_role.role %><br>
                     <input type="text" class="form-control" style="width:120px;display:inline-block;" placeholder="名前を入力">
-                    <input type="submit" class="btn btn-xs btn-success" value="送信する" style="display:inline-block;margin-left:10px;margin-bottom:5px;width:70px;padding-left:5px;">
+                    <input type="submit" class="btn btn-sm btn-success" value="送信する" style="display:inline-block;margin-left:10px;margin-bottom:5px;width:70px;padding-left:5px;">
                 </div>
             <% end %>
             </div>
@@ -76,7 +76,7 @@
     <div style="margin-top:40px;">
         <div class="btn-group btn-group-justified" role="group" style="width:100%;margin-bottom:30px;">
             <% @work.tasks.where(:parent_task_id => 0).order(:t_number).each do |p_t| %>
-                <a class="btn btn-info" href="javascript:change_calendar(<%= p_t.t_number %>)"><%= p_t.t_name %></a>
+                <a class="btn btn-sm btn-info" href="javascript:change_calendar(<%= p_t.t_number %>)"><%= p_t.t_name %></a>
             <% end %>
         </div>
         <% @work.tasks.where(:parent_task_id => 0).each do |p_t| %>
@@ -132,9 +132,10 @@
 
     <hr>
     <div>
+        <br>
         <h4><i class="fas fa-angle-double-right"></i>スケジュール</h4>
         <br>
-        <table class="table">
+        <table class="table table-borderless">
             <% @persons.each do |person| %>
                 <tr>
                 <td><%= person %></td>
@@ -182,7 +183,7 @@
                 </small>
                 <br>
                 <% if z_task.parent_task_id != 0 then %>
-                <p><span class="btn btn-<%= z_task.task_status[1] %>" style="color:white;margin-top:-20px;float:right;"><%= z_task.task_status[0] %></span></p>
+                <p><span class="btn btn-sm btn-<%= z_task.task_status[1] %>" style="color:white;margin-top:-20px;float:right;"><%= z_task.task_status[0] %></span></p>
                 <% end %>
             </a>
             <% if z_task.parent_task_id == 0 %>
