--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,7 +4,13 @@
 <div style="margin:20px 60px;">
     <h4>
     <i class="fas fa-asterisk"></i>　
-    <%= @task.t_name %>　
+    <a class="btn btn-light btn-lg" id="t_name-text" href="javascript:create_input('#t_name-text')" style="background-color:#eee;margin-left:-20px;" href=""><%= @task.t_name %></a>　
+    <span id="t_name-text-input" style="display:none;">
+    <%= form_for @task, method: :post, remote: true, :style => "display:inline-block;" do |f| %>
+        <%= f.text_field :t_name, :class => "form-control", :style => "width:180px;display:inline-block;margin-left:-50px;" %>
+        <%= f.submit "保存する", :class => "btn btn-sm btn-success" %>
+    <% end %>
+    </span>
     <% if @parent_task != nil then %>
         <small style="margin-left:40px;font-size:14px;"><a href="/tasks/<%= @parent_task.id %>"><%= @parent_task.t_name %></a>の用事</small>
     <% end %>
@@ -58,6 +64,8 @@
                     <input type="text" name="reference_url" class="form-control" style="width:300px;">
                     <label name="reference_image">画像URL</label>
                     <input type="text" name="reference_image" class="form-control" style="width:300px;">
+                    <br>
+                    <a href="" class="btn btn-sm btn-success">保存</a>
                 <% end %>
             </div>
             <br>
@@ -65,6 +73,8 @@
             <h4><i class="fas fa-asterisk"></i> <%= @task.t_name %>の詳細</h4>
             <br>
             <textarea rows="3" cols="100" class="form-control"></textarea>
+            <br>
+            <a href="" class="btn btn-sm btn-success">保存</a>
             <br>
             <% if @task.parent_task_id == 0 then %>
                 <br>
@@ -92,7 +102,11 @@
                     <div class="list-group">
                         <% @relate_tasks.each do |r_task| %>
                             <a href="/tasks/<%= r_task.id %>">
-                            <div class="list-group-item list-group-item-action">
+                            <% if r_task.parent_task_id == 0 then %>
+                                <div class="list-group-item list-group-item-action active">
+                            <% else %>
+                                <div class="list-group-item list-group-item-action">
+                            <% end %>
                                 <%= r_task.t_name %>
                                 <br>
                                 <i class="fas fa-user-circle"></i>　<small><%= r_task.role %></small>
