--- a/app/views/tasks/update.js.erb
+++ b/app/views/tasks/update.js.erb
@@ -1,3 +1,3 @@
 $("#time-text-input").css('display', 'none')
-$("#role-text-input").css('display', 'none')
+$("#<%= @task_column %>-text-input").css('display', 'none')
 $("#<%= @task_column %>-text").css('display', 'inline-block').text('<%= @task_text %>')
