--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -83,12 +83,12 @@
             <% w_start_date = @work.tasks.find_by(:t_number => p_t.t_number, :parent_task_id => 0).start_date %>
             <% w_end_date = @work.tasks.find_by(:t_number => p_t.t_number, :parent_task_id => 0).end_date %>
             <% w_diff_date = ((w_end_date - w_start_date+2).to_i/4).ceil %>
-            <% if p_t.t_number == 4 then %>
+            <% if p_t.t_number == 1 then %>
                 <div id="calendar-<%= p_t.t_number %>" class="visible-calendar">
             <% else %>
                 <div id="calendar-<%= p_t.t_number %>" style="display:none">
             <% end %>
-                <h4>一部カレンダー　<%= w_start_date %>〜<%= w_end_date %></h4>
+                <h4><%= p_t.t_name %>　<%= w_start_date %>〜<%= w_end_date %></h4>
                 <br>
                 <table class="table table-borderless">
                     <thead>
@@ -96,9 +96,9 @@
                     <tr style='font-size:12px;'>
                         <td>タスク</td>
                         <td><%= "#{w_start_date.to_s} 〜 #{(w_start_date + w_diff_date).to_s}" %></td>
-                        <td><%= "#{w_start_date + w_diff_date+1} から #{w_start_date + w_diff_date*2}" %></td>
-                        <td><%= "#{w_start_date + w_diff_date*2+1} から #{w_start_date + w_diff_date*3}" %></td>
-                        <td><%= "#{w_start_date + w_diff_date*3+1} から #{w_end_date}" %></td>
+                        <td><%= "#{w_start_date + w_diff_date+1} 〜 #{w_start_date + w_diff_date*2}" %></td>
+                        <td><%= "#{w_start_date + w_diff_date*2+1} 〜 #{w_start_date + w_diff_date*3}" %></td>
+                        <td><%= "#{w_start_date + w_diff_date*3+1} 〜 #{w_end_date}" %></td>
                     </tr>
                     <% else %>
                     <tr style='font-size:12px;'>
@@ -159,37 +159,39 @@
             </tr>
         <% end %>
         </table>
+    </div>
         <br>
+    <div>
         <h4><i class="fas fa-angle-double-right"></i>全タスク表</h4>
         <br>
         <div class="row">
-        <% @tasks.each do |z_task| %>
-            <% if z_task.parent_task_id == 0 %>
-                <% if z_task.t_number != 1 %>
+            <% @tasks.each do |z_task| %>
+                <% if z_task.parent_task_id == 0 %>
+                    <% if z_task.t_number != 1 %>
+                        </div>
+                    <% end %>
+                    <div class="col-sm-6" style="margin-bottom:20px;">
+                        <div class="list-group">
+                        <a href="/tasks/<%= z_task.id %>" class="list-group-item list-group-item-action active">
+                <% else %>
+                    <a href="/tasks/<%= z_task.id %>" class="list-group-item list-group-item-action">
+                <% end %>
+                    <%= z_task.t_name %>
+                    <br>
+                    <small>
+                    <i class="fas fa-user-circle"></i>　<%= z_task.role %>
+                    <br>
+                    <i class="fas fa-clock"></i>　<%= z_task.end_date %>まで
+                    </small>
+                    <br>
+                <% if z_task.parent_task_id != 0 then %>
+                    <p><span class="btn btn-sm btn-<%= z_task.task_status[1] %>" style="color:white;margin-top:-20px;float:right;"><%= z_task.task_status[0] %></span></p>
+                <% end %>
+                </a>
+                <% if z_task.parent_task_id == 0 then %>
                     </div>
                 <% end %>
-                <div class="col-sm-6" style="margin-bottom:20px;">
-                <div class="list-group">
-                    <a href="/tasks/<%= z_task.id %>" class="list-group-item list-group-item-action active">
-            <% else %>
-                <a href="/tasks/<%= z_task.id %>" class="list-group-item list-group-item-action">
             <% end %>
-                <%= z_task.t_name %>
-                <br>
-                <small>
-                <i class="fas fa-user-circle"></i>　<%= z_task.role %>
-                <br>
-                <i class="fas fa-clock"></i>　<%= z_task.end_date %>まで
-                </small>
-                <br>
-                <% if z_task.parent_task_id != 0 then %>
-                <p><span class="btn btn-sm btn-<%= z_task.task_status[1] %>" style="color:white;margin-top:-20px;float:right;"><%= z_task.task_status[0] %></span></p>
-                <% end %>
-            </a>
-            <% if z_task.parent_task_id == 0 %>
-                </div>
-            <% end %>
-        <% end %>
         </div>
     </div>
     <br>
