--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -69,7 +69,7 @@
     <div class="" style="margin-top:40px;">
         <h4><i class="fas fa-angle-double-right"></i>内容</h4>
         <br>
-        <p>まだ情報が少ないため、表示できません。</p>
+        <p>（未実装）</p>
         <br>
     </div>
     <hr>
