--- a/app/views/works/welcome.html.erb
+++ b/app/views/works/welcome.html.erb
@@ -1,5 +1,5 @@
 <div style="margin:50px 60px;">
-    <% works_url = request.url.split("welcome")[0] + "works/" + current_role.workurl %>
+    <% works_url = request.url.split("welcome")[0] + "login?guijhw=" + current_role.workurl %>
     <h3>ようこそ！</h3>
     <br>
     <table class="table">
