--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -119,6 +119,9 @@
             <% end %>
         <% end %>
         </table>
+
+<input type="hidden" name="email" value="<%= params[:email] %>">
+
     <% end %>
 </div>
     <div class="text-center" style="margin:0 auto;">
