add mail myself

--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -65,6 +65,10 @@
             <% end %>
         </div>
         <br>
+        <div class="text-center" style="margin:0 auto;">
+            <%= f.submit "スケジュール作成する", :class => "btn btn-warning btn-lg", :style => "color:white;" %>
+        </div>
+        <br>
     </div>
 </div>
 <div id="search-plan2" style="margin:40px 60px;">
@@ -127,6 +131,7 @@
     <div class="text-center" style="margin:0 auto;">
         <%= f.submit "スケジュール作成する", :class => "btn btn-warning btn-lg", :style => "color:white;" %>
     </div>
+    <br>
 <% end %>
 
 <!-- Modal -->
