impl json generate tasks

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -37,8 +37,11 @@
                 <label name="schedule-type">目的</label>
                 <select  name="schedule-type" class="form-control" style="width:200px;margin:0 auto;">
                     <option name="nomikai">飲み会</option>
-                    <option name="normal">自分で作る</option>
                     <option name="gassyuku">合宿</option>
+                    <option name="wedding">結婚</option>
+                    <option name="inheritance">相続</option>
+                    <option name="it_subsidy">IT補助金</option>
+                    <option name="normal">自分で作る</option>
                 </select>
                 <div>
                 <label name="email">代表者メールアドレス</input>
