--- a/app/views/works/welcome.html.erb
+++ b/app/views/works/welcome.html.erb
@@ -2,6 +2,8 @@
     <% works_url = request.url.split("welcome")[0] + "login?guijhw=" + current_role.workurl %>
     <h3>ようこそ！</h3>
     <br>
+    <h5>不具合でメールは送信されていません。。。パスワードは忘れないようにしてください</h5>
+    <br>
     <table class="table">
     <tr>
         <td>パスワード</td>
