--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -50,12 +50,22 @@
             <div class="schdule-detail-section" style="background-color:#eee;padding:15px;margin-top:20px">
                 <% if @task.reference_url != "" then %>
                     <h5>参考ページ</h5>
-                    <a class="thumbnail" target="_blank" href="<%= @task.reference_url %>">
-                        <h5><%= @task.reference_text %></h5>
-                        <div style="margin:0 auto;">
-                        <img src="<%= @task.reference_image %>" width="70%">
+                    <% ref_counter = @task.reference_url.split("||||").length-1 %>
+                    <% 0.upto(ref_counter) do |r_count| %>
+                        <div style="margin-top:20px;">
+                            <a class="thumbnail" target="_blank" href="<%= @task.reference_url.split("||||")[r_count] %>">
+                            <h6><%= @task.reference_title.split("||||")[r_count] %></h6>
+                            </a>
+                            <div class="row">
+                                <div class="col-sm-4">
+                                <img src="<%= @task.reference_image.split("||||")[r_count] %>" width="90%">
+                                </div>
+                                <div class="col-sm-8">
+                                <p><%= @task.reference_text.split("||||")[r_count][0..100] %></p>
+                                </div>
+                            </div>
                         </div>
-                    </a>
+                    <% end %>
                 <% else %>
                     <h5><i class="fas fa-angle-double-right"></i>　参考ページを登録しよう</h5>
                     <label name="reference_text">サイト名</label>
