--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -39,8 +39,10 @@
                     <option name="nomikai">飲み会</option>
                     <option name="gassyuku">合宿</option>
                     <option name="wedding">結婚</option>
+                    <option name="myhome">マイホーム購入</option>
                     <option name="inheritance">相続</option>
                     <option name="it_subsidy">IT補助金</option>
+                    <option name="it_subsidy">赤ちゃん予防接種</option>
                     <option name="normal">自分で作る</option>
                 </select>
                 <div>
