imple recruit and restaurant open

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -36,14 +36,17 @@
                 <input type="date" name="end-date" class="form-control" style="width:200px;margin:0 auto;" value="2020-07-14"></input>
                 <label name="schedule-type">目的</label>
                 <select  name="schedule-type" class="form-control" style="width:200px;margin:0 auto;">
-                    <option name="nomikai">飲み会</option>
-                    <option name="gassyuku">合宿</option>
+                    <option name="it_subsidy">赤ちゃん予防接種</option>
                     <option name="wedding">結婚</option>
                     <option name="myhome">マイホーム購入</option>
                     <option name="inheritance">相続</option>
                     <option name="it_subsidy">IT補助金</option>
-                    <option name="it_subsidy">赤ちゃん予防接種</option>
+                    <option name="open_restaurant">飲食店開業</option>
+                    <option name="nomikai">飲み会</option>
+                    <option name="gassyuku">合宿</option>
+                    <option name="recruit">就活</option>
                     <option name="normal">自分で作る</option>
+                    <!-- <option name=""></option> -->
                 </select>
                 <div>
                 <label name="email">代表者メールアドレス</input>
